A possible fix to anchor links on mobile. (#465)

--- a/_sass/uswds/components/_anchor-links.scss
+++ b/_sass/uswds/components/_anchor-links.scss
@@ -7,7 +7,6 @@
   h6 {
     position: relative;
     a {
-
       position: absolute;
       top: .35rem;
       left: -2rem;
@@ -23,6 +22,14 @@
           fill: #0000EE;
           opacity: 1;
         }
+      }
+    }
+    @include at-media-max($theme-header-min-width) {
+      a {
+        position: relative;
+        opacity: 1;
+        left: 0;
+        vertical-align: top;
       }
     }
   }
